# InstantTensor

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  checkout_submodule.sh  checkout_submodules.sh  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
csrc/: async_executor.hpp  dlpack_utils.hpp  loader_common.cpp  loader_io_aio.cpp  loader_io_cufile.cpp  loader_io_inmem.cpp  main.cpp  queue.hpp
csrc/instant_tensor/: async_executor.hpp  common.hpp  dlpack_utils.hpp  io_context.hpp  loader.hpp  types.hpp
csrc/instant_tensor/dl_binding/: cuda_binding.hpp  cufile_binding.hpp  dl_binding_utils.hpp  nccl_binding.hpp
csrc/instant_tensor/dl_loader/: cuda_loader.hpp  cufile_loader.hpp  dl_loader_utils.hpp  nccl_loader.hpp
docs/: benchmark.md  build_doc.md
docs/source/: api.rst  conf.py  index.rst
docs/source/_static/: custom.css
instanttensor/: __init__.py  _impl.py  safe_open_impl.py
tests/: test.py
